[package]
name = "lrcat-extractor"
version = "0.2.1"
authors = ["Hubert Figuière <hub@figuiere.net>"]
edition = "2018"
description = "Extract data from Adobe Lightroom™ catalogs."
license = "MPL-2.0"
repository = "https://github.com/hfiguiere/lrcat-extractor"
documentation = "https://docs.rs/lrcat-extractor/"

[dependencies]
chrono = "0.4.0"
peg = { version = "0.7.0" }
rusqlite = { version = "0.28.0" }

docopt = { version = "0.8.1", optional = true }
serde = { version = "1.0.15", optional = true }
serde_derive = { version = "1.0", optional = true }  # if you're using `derive(Deserialize)`

[lib]
name = "lrcat"

[[bin]]
name = "dumper"
required-features = ["binaries"]

[features]
binaries = ["docopt", "serde", "serde_derive" ]
