[package]
name = "lrcat-extractor"
version = "0.4.1"
authors = ["Hubert Figuière <hub@figuiere.net>"]
edition = "2018"
description = "Extract data from Adobe Lightroom™ catalogs."
license = "MPL-2.0"
repository = "https://github.com/hfiguiere/lrcat-extractor"
documentation = "https://docs.rs/lrcat-extractor/"

[dependencies]
chrono = "0.4.0"
peg = "0.8.1"
rusqlite = { version = "0.29.0" }

docopt = { version = "1.1.1", optional = true }
serde = { version = "1.0.188", optional = true, features = ["derive"] }

[lib]
name = "lrcat"

[[bin]]
name = "dumper"
required-features = ["binaries"]

[features]
binaries = ["docopt", "serde" ]
