[package]
name = "lrcat-extractor"
version = "0.5.0"
authors = ["Hubert Figuière <hub@figuiere.net>"]
edition = "2018"
description = "Extract data from Adobe Lightroom™ catalogs."
license = "MPL-2.0"
repository = "https://github.com/hfiguiere/lrcat-extractor"
documentation = "https://docs.rs/lrcat-extractor/"

[dependencies]
chrono = "0.4.0"
peg = "0.8.3"
rusqlite = { version = "0.31.0" }
thiserror = "1.0.47"

clap = { version = "^4.5", optional = true, features = ["derive"] }

[lib]
name = "lrcat"

[[bin]]
name = "dumper"
required-features = ["binaries"]

[features]
default = ["binaries"]
binaries = ["clap"]
